horizontal scrolling fixed

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -17,6 +17,7 @@ body {
 .outer-scroll-container {
     height: 100vh;
     overflow-y: hidden;
+    overscroll-behavior-x: none;
     /* width: 100%;
     height: 100vw;
     transform: rotate(-90deg) translateX(-100vh);
@@ -26,8 +27,7 @@ body {
     position: absolute;
     scrollbar-width: none;
     -ms-overflow-style: none;
-    scroll-snap-type: y proximity;
-    overscroll-behavior-x: none; */
+    scroll-snap-type: y proximity; */
 }
 ::-webkit-scrollbar {
     display: none;
